# YatzyRefactoringKata-Solved

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/src/: yatzy.cpp  yatzy.hpp
cpp/test/: CMakeLists.txt  allTests.cpp
csharp/Yatzy/: Yatzy.cs  Yatzy.csproj
csharp/Yatzy.Test/: Yatzy.Test.csproj  YatzyTest.cs
java/src/main/java/: Yatzy.java
java/src/test/java/: YatzyTest.java
